--- a/templates/alerts/new_alert.html
+++ b/templates/alerts/new_alert.html
@@ -5,8 +5,8 @@
 <section class="create-alert-form">
     <form action="/alerts/new" method="post">
         <div class="form-group">
-            <label for="item_id">Item ID</label>
-            <input class="form-control" id="item_id" name="item_id" type="text"/>
+            <label for="item_url">Item URL</label>
+            <input class="form-control" id="item_url" name="item_url" type="text"/>
         </div>
 
         <div class="form-group">
